--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.5.1</version>
 			</plugin>
+			
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-checkstyle-plugin</artifactId>
+		        <version>2.6</version>
+			</plugin>
+
+			<plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>findbugs-maven-plugin</artifactId>
+		        <version>2.3.3-SNAPSHOT</version>
+			</plugin>
 
 		</plugins>
 	</reporting>
