--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.spilth</groupId>
 	<artifactId>piglib</artifactId>
-	<version>1.0.4</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>piglib</name>
